# politicaaberta

./: .gitignore  .travis.yml  Dockerfile  LICENSE  Main.hs  README.md  app.js  build.gradle  knexfile.js  package-lock.json  package.json  politicaaberta.cabal  pom.xml  settings.gradle  testes.hs
gradle/wrapper/: gradle-wrapper.properties
migrations/: 20171001175439_setup.js  20171008125149_rename_secondary_site_id.js  20171008130936_create_party_table.js  20171008140345_deputy_foreign_key_to_party.js
routes/: api.js  deputy.js
routes/validator/: deputy_validator.js  expense_validator.js
server/: db.js
src/main/app/: package.json
src/main/app/public/: index.html
src/main/app/src/: App.js  index.js
src/main/app/src/components/: SimpleTable.js
src/main/java/com/allanvital/politicaaberta/: PoliticaabertaApplication.java  WebConfig.java
src/main/java/com/allanvital/politicaaberta/api/: ApiApplication.java  StaticConfiguration.java
src/main/java/com/allanvital/politicaaberta/batch/: BatchConfiguration.java  JobsConfiguration.java  StepsConfiguration.java
src/main/resources/: application.properties
src/main/resources/static/css/: style.css
src/main/resources/templates/: deputy.ftl  deputy_search.ftl  faq.ftl  index.ftl  index.html
src/main/resources/templates/include/: footer.ftl  header.ftl
src/test/java/com/allanvital/politicaaberta/: PoliticaabertaApplicationTests.java  XmlParsingTests.java
src/test/resources/: application.properties  deputies.xml  expenses.xml
test/: route_api_tests.js  route_deputy_test.js
(+98 files in other folders)
