name:                politicaaberta
version:             0.0.1
synopsis:            Politica Aberta
homepage:            https://github.com/vitallan/politicaaberta
license:             MIT
author:              Allan Vital
maintainer:          allan.vital@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.22

executable politicaaberta
  main-is:             Main.hs
  -- other-modules:
  build-depends:        base ==4.8.*
                     ,  scotty